vanilla_proxy_retry/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:

            - name: local_service
              domains: ["*"]
              routes:

              # Retry Policy Example
              - match:
                  prefix: "/"
                route:
                  cluster: service_example
                  retry_policy:
                    retry_on: "5xx"
                    num_retries: 10
                    per_try_timeout: 2s
              # ----

          http_filters:
          - name: envoy.router

  clusters:
  - name: service_example
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_example
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: status_app
                port_value: 8080
